# firmware-rs

./: .gitignore  Cargo.toml  build_and_upload.sh  test_crates.sh
.cargo/: config.toml
crates/flexcan-teensy4/: Cargo.toml
crates/flexcan-teensy4/src/: controller.rs  lib.rs  tests.rs  types.rs
crates/icm20649/: Cargo.toml
crates/icm20649/src/: driver.rs  lib.rs  registers.rs  sample.rs  tests.rs  types.rs
crates/teensy4-flexcan/: Cargo.toml  instance.rs  registers.rs
crates/teensy4-flexcan/src/: lib.rs  pins.rs
crates/teensy4-usb/: Cargo.toml
crates/teensy4-usb/src/: descriptors.rs  lib.rs
crates/usb-teensy4/: Cargo.toml
src/: filters.rs  main.rs  reset.rs  transmitter.rs  utils.rs
src/filters/: lowpass_filter.rs  pid_filter.rs
src/transmitter/: et16s.rs
src/utils/: vector_math.rs
